fixed styles on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,15 @@ img {
 		margin-top: 80px;
 	}
 }
+@media screen and (max-width: 768px) {
+	
+	.col-md-6 {
+		width: 100%;
+		display:flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap:wrap;
+		flex-direction: column;
+	}
+
+}
